tests/baselines/reference/typesWithProtectedConstructor.errors.txt
tests/cases/conformance/types/members/typesWithProtectedConstructor.ts(5,9): error TS2674: Constructor of class 'C' is protected and only accessible within the class declaration.
tests/cases/conformance/types/members/typesWithProtectedConstructor.ts(13,10): error TS2674: Constructor of class 'C2' is protected and only accessible within the class declaration.


==== tests/cases/conformance/types/members/typesWithProtectedConstructor.ts (2 errors) ====
    class C {
        protected constructor() { }
    }
    
    var c = new C(); // error C is protected
            ~~~~~~~
!!! error TS2674: Constructor of class 'C' is protected and only accessible within the class declaration.
    var r: () => void = c.constructor;
    
    class C2 {
        protected constructor(x: number);
        protected constructor(x: any) { }
    }
    
    var c2 = new C2(); // error C2 is protected
             ~~~~~~~~
!!! error TS2674: Constructor of class 'C2' is protected and only accessible within the class declaration.
    var r2: (x: number) => void = c2.constructor;